chore: checkpoint full workspace updates